# MM

./: .gitignore  CMakeLists.txt  Compressed.txt
src/: Arguments.hpp  CMakeLists.txt  Computation.hpp  Coords.hpp  Data.hpp  Datasets.hpp  DimensionError.hpp  IndexGenerator.hpp  MultidimArray.hpp  compact_alg_1.cpp  compact_alg_2.cpp  compact_alg_3.cpp  compile.txt  compressed.cpp  compressed_mm.cpp  full_matrix.cpp  full_matrix_mm.cpp  gcc_compile.sh  icpc_compile.sh  main.cpp  main_mm.cpp  mm_assert.hpp  multimat_abs.cpp
src/MPI/: anonymusAt1258_seq_kernel.cpp  anonymusAt1275_seq_kernel.cpp  anonymusAt1885_seq_kernel.cpp  anonymusAt1901_seq_kernel.cpp  anonymusAt2786_seq_kernel.cpp  anonymusAt3037_seq_kernel.cpp  anonymusAt3201_seq_kernel.cpp  anonymusAt3831_seq_kernel.cpp  anonymusAt4242_seq_kernel.cpp  anonymusAt5040_seq_kernel.cpp  anonymusAt5611_seq_kernel.cpp  anonymusAt6172_seq_kernel.cpp  anonymusAt846_seq_kernel.cpp  anonymusAt863_seq_kernel.cpp
src/compressed_cell_centric/: #Computation.hpp#  Arguments.hpp  CompressedDataStructure.hpp  Computation.hpp  Data.hpp  Datasets.hpp
src/full_matrix/: Arguments.hpp  Computation.hpp  Data.hpp  Datasets.hpp  IndexGenerator.hpp
test/: CMakeLists.txt  test_Coords.cpp
test/compressed_cell_centric/: Util.hpp  test_Arguments.cpp  test_CompressedDataStructure.cpp  test_Computation.cpp  test_Data.cpp  test_Datasets.cpp
translator/: mm_gen_mpi.py  mm_gen_mpi_compact.py  ops.py  util.py
